# pyg

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg
conda/: bld.bat  meta.yaml  meta.yaml.bak
docs/: Makefile  base.rst  conf.py  index.rst  make.bat  mongo.rst  timeseries.rst  tutorial_mongo.rst  tutorial_timeseries.rst  tutorials.rst
docs/lab/: tutorial_cell.ipynb  tutorial_dag.ipynb  tutorial_dict.ipynb  tutorial_dictable.ipynb  tutorial_mongo.ipynb  tutorial_perdictable.ipynb  tutorial_sql.ipynb  tutorial_timeseries.ipynb  tutorial_ts_decorators.ipynb  tutorial_ts_ewma_time.ipynb
scripts/: knn.py  requirements.txt
src/: setup.py
src/pyg/: __init__.py  __init__.py.bak
src/pyg/base/: __init__.py  (+34 more)
tests/base/: book.xlsx  test_acell.py  test_as_float.py  test_as_list.py  test_bi.py  test_cache.py  test_cells.py  test_dag.py  test_dates.py  test_decorators.py  test_dict.py  test_dictable.py  test_dictattr.py  test_drange.py  test_encode.py  test_eq.py  test_getitem.py  test_index.py  test_inspect.py  test_logger.py  test_loop.py  test_named_dict.py  test_pandas.py  test_parquet.py  test_perdictable.py  test_reducer.py  test_sort.py  test_sync.py  test_tree.py  test_txt.py  test_types.py  test_ulist.py  test_waiter.py  test_zip.py
tests/mongo/: test_async_cursor.py  test_async_reader.py  test_cursor.py  test_db_acell.py  test_db_cell.py  test_encoders.py  test_get_cell.py  test_mongo.py  test_periodic_cell.py  test_pk_cursor.py  test_q.py  test_reader.py
tests/timeseries/: test_ts.py  test_ts_bits.py  test_ts_decorators.py  test_ts_ewm.py  test_ts_index.py  test_ts_quantile.py  test_ts_states.py  test_ts_vs_pandas.py
(+75 files in other folders)
