[metadata]
name = pygpyg
version = 1.0.9
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for data manipulation including creation of DAGs and tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyg-bond; pyg-base; pyg-timeseries; pyg-npy; pyg-encoders; pyg-cell

[options.packages.find]
where = src