[metadata]
name = pygpyg
version = 1.0.20221103
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for data manipulation including creation of DAGs and tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pyg-bond>="0.0.12" 
    pyg-base>="0.0.39"
    pyg-timeseries>="0.0.15" 
    pyg-npy>="0.0.7" 
    pyg-encoders>="0.0.11"
    pyg-cell>="0.0.21"
    pyg-sql>="0.0.37"

[options.packages.find]
where = src
